Checkpoint before assistant change: Adjust video display to ensure full phone image is visible
Modify video width and container aspect ratio in out.css to prevent phone image cutoff.

--- a/public/out.css
+++ b/public/out.css
@@ -803,8 +803,8 @@ video {
   width: 36%;
 }
 
-.w-\[90\%\] {
-  width: 90%;
+.w-\[80\%\] {
+  width: 80%;
 }
 
 .w-0 {
@@ -1042,11 +1042,6 @@ video {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 
 .object-cover {
